samples/_failures_safe/1761284596_b534e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6e5aeae.c: In function ‘main’:
./samples/SAFE/__tmp_b6e5aeae.c:164:5: error: expected declaration or statement at end of input
  164 |     if (token_count == 0) {
      |     ^~
./samples/SAFE/__tmp_b6e5aeae.c:164:5: error: expected declaration or statement at end of input
